# freeboxvm

./: LICENSE  MANIFEST.in  README.en.md  README.md  freeboxvm  freeboxvm.py  freeboxvm.spec  pyproject.toml  requirements.txt
.copr/: Makefile
man/man1/: freeboxvm.1
src/: freeboxvm.py
