[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freeboxvm"
description = "Command-line tool to manage Freebox virtual machines"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
authors = [{ name = "Laurent Vivier" }, { email = "laurent@vivier.eu" }]
dependencies = [ "requests", "websockets>=12", "PyGObject", "tqdm", "humanize" ]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/vivier/freeboxvm"

[project.scripts]
freeboxvm = "freeboxvm:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["freeboxvm", "freeboxvm_version"]

[tool.setuptools.dynamic]
version = { attr = "freeboxvm_version.__version__" }
